will it stream?

--- a/pages/src/index.html
+++ b/pages/src/index.html
@@ -1,1 +1,5 @@
+<a href="emit.html">Start Video Stream</a>
+<a href="visualize.html">Visualize Video Stream</a>
+
+
 <h1>HELLOOOOOOOOOOOOOOOOOO</h1>
