--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,10 @@
     <meta name="theme-color" content="#5AB8EB" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="images/icon.jpg" />
-    <link
-      rel="stylesheet"
-      href="/libraries/bootstrap-4.4.1-dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.6.1/css/all.css"
-      integrity="sha384-NJXGk7R+8gWGBdutmr+/d6XDokLwQhF1U3VA7FhvBDlOq7cNdI69z7NQdnXxcF7k"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/libraries/bootstrap-4.4.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-NJXGk7R+8gWGBdutmr+/d6XDokLwQhF1U3VA7FhvBDlOq7cNdI69z7NQdnXxcF7k" crossorigin="anonymous" />
 
-    <link
-      href="http://fonts.googleapis.com/css?family=Alegreya+Sans+SC%7CNixie+One%7CMonda%7CText+Me+One%7CMegrim%7CRaleway"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="http://fonts.googleapis.com/css?family=Alegreya+Sans+SC%7CNixie+One%7CMonda%7CText+Me+One%7CMegrim%7CRaleway" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="/libraries/socket.io.js"></script>
 
