--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,16 @@
     <title>Traffic Anaylsis</title>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#5AB8EB" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="images/icon.jpg" />
-    <link rel="stylesheet" href="/libraries/bootstrap-4.4.1-dist/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" type="text/css" />
+    <link rel="stylesheet" href="/libraries/bootstrap-4.4.1-dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-NJXGk7R+8gWGBdutmr+/d6XDokLwQhF1U3VA7FhvBDlOq7cNdI69z7NQdnXxcF7k" crossorigin="anonymous" />
 
     <link href="http://fonts.googleapis.com/css?family=Alegreya+Sans+SC%7CNixie+One%7CMonda%7CText+Me+One%7CMegrim%7CRaleway" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="/libraries/socket.io.js"></script>
 
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/libraries/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="/css/styles.css"  type="text/css"/>
+    <link rel="stylesheet" href="/libraries/leaflet/leaflet.css" type="text/css" />
 
     <script src="/libraries/jquery.min.js"></script>
     <script src="/libraries/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
